# bring-with-me-bot

./: Cargo.toml  README.md  items.db  items.txt
src/: database.rs  lib.rs  send_info.rs
