[package]
name = "tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = { version = "0.23", default-features = false, features = ["async-http-client"] }
tokio = { version = "1.25.0", features = ["full"] }
sqlite = "*"
mail-send = "0.3.1"